CSS fixes:
* Cann table used to overflow in mobile view
* Padding in header list made it off-centre
* Font size fixes

--- a/styles/cann-table.css
+++ b/styles/cann-table.css
@@ -40,3 +40,11 @@
 	font-size: 0.6em;
 	display: block;
 }
+
+@media screen and (orientation:portrait) {
+	#cann-table-area {
+		width: 100%;
+		overflow: scroll;
+	}
+
+}
